--- a/src/botconfig.json
+++ b/src/botconfig.json
@@ -1,4 +1,4 @@
 {
-	"token": "YOUR DISCORD BOT TOKEN HERE",
+	"token": "NTYzODI2NDM2MDQxODY3Mjc1.XKlKQw.YOgDMTuBy6RZGfX1HLr6rBGmzgQ",
 	"prefix": "!"
 }
